Убран github workflows на время активной разработки

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,49 @@
-name: ci
+# name: ci
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
 
-jobs:
-  lint:
-    runs-on: ubuntu-latest
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v5
+#     steps:
+#       - uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v6
-        with:
-          node-version: 20
+#       - uses: actions/setup-node@v6
+#         with:
+#           node-version: 20
 
-      - run: npm i -g --force corepack@latest && corepack enable
+#       - run: npm i -g --force corepack@latest && corepack enable
 
-      - name: Install dependencies
-        run: npx nypm@latest i
+#       - name: Install dependencies
+#         run: npx nypm@latest i
 
-      - name: Lint
-        run: npm run lint
+#       - name: Lint
+#         run: npm run lint
 
-  test:
-    runs-on: ubuntu-latest
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v5
+#     steps:
+#       - uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v6
-        with:
-          node-version: 20
+#       - uses: actions/setup-node@v6
+#         with:
+#           node-version: 20
 
-      - run: npm i -g --force corepack@latest && corepack enable
+#       - run: npm i -g --force corepack@latest && corepack enable
 
-      - name: Install dependencies
-        run: npx nypm@latest i
+#       - name: Install dependencies
+#         run: npx nypm@latest i
 
-      - name: Playground prepare
-        run: npm run dev:prepare
+#       - name: Playground prepare
+#         run: npm run dev:prepare
 
-      - name: Test
-        run: npm run test
+#       - name: Test
+#         run: npm run test
