--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,7 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
+    "@nuxt/ui": "^4.2.1",
     "@tailwindcss/vite": "^4.1.17",
     "nuxt": "^4.2.1",
     "tailwindcss": "^4.1.17"
