--- a/playground/package.json
+++ b/playground/package.json
@@ -1,16 +1,13 @@
 {
-  "private": true,
-  "name": "my-module-playground",
-  "type": "module",
-  "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate"
-  },
-  "dependencies": {
-    "@nuxt/ui": "^4.2.1",
-    "@tailwindcss/vite": "^4.1.17",
-    "nuxt": "^4.2.1",
-    "tailwindcss": "^4.1.17"
-  }
+    "private": true,
+    "name": "my-module-playground",
+    "type": "module",
+    "scripts": {
+        "dev": "nuxi dev",
+        "build": "nuxi build",
+        "generate": "nuxi generate"
+    },
+    "dependencies": {
+        "nuxt": "^4.2.1"
+    }
 }
