--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "use-l5",
     "version": "1.1.0",
-    "description": "My new Nuxt module",
-    "repository": "your-org/my-module",
+    "description": "Nuxt-модуль с типизированным useL5-композаблом для парсинга фильтров, синхронизации с query в роуте и сборки параметров для API/URL",
+    "repository": "merkulovka/use-l5",
     "license": "MIT",
     "type": "module",
     "exports": {
